--- a/Koting/Koting/Storyboard/MeetingList/MeetingListStoryboard.storyboard
+++ b/Koting/Koting/Storyboard/MeetingList/MeetingListStoryboard.storyboard
@@ -1,7 +1,185 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Meeting ListVC-->
+        <scene sceneID="YM3-Hb-HVo">
+            <objects>
+                <viewController id="td4-Wk-S6y" customClass="MeetingListVC" customModule="Koting" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nEY-31-DVo">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Wj3-um-QE7">
+                                <rect key="frame" x="0.0" y="44" width="375" height="574"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="meetingListTableViewCell" rowHeight="120" id="cNs-a5-a6H" customClass="MeetingListTableViewCell" customModule="Koting" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="120"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cNs-a5-a6H" id="Opo-ct-0gx">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wM4-Qt-B3q">
+                                                    <rect key="frame" x="279" y="20" width="80" height="80"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="Lez-Pz-Vbc"/>
+                                                        <constraint firstAttribute="width" constant="80" id="wch-Un-tVM"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o3M-04-tbY">
+                                                    <rect key="frame" x="169" y="50" width="42" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="gOJ-GJ-772"/>
+                                                        <constraint firstAttribute="width" constant="42" id="jXu-j7-ZDe"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MHG-rX-ul0">
+                                                    <rect key="frame" x="16" y="42" width="116" height="36"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="116" id="hEX-s4-cSy"/>
+                                                        <constraint firstAttribute="height" constant="36" id="kcN-Gj-sQU"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="o3M-04-tbY" firstAttribute="top" secondItem="Opo-ct-0gx" secondAttribute="topMargin" constant="39" id="7eD-CK-2mv"/>
+                                                <constraint firstItem="MHG-rX-ul0" firstAttribute="leading" secondItem="Opo-ct-0gx" secondAttribute="leadingMargin" id="85z-Xj-fTO"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="o3M-04-tbY" secondAttribute="bottom" constant="38" id="CGf-ff-vIW"/>
+                                                <constraint firstItem="o3M-04-tbY" firstAttribute="leading" secondItem="MHG-rX-ul0" secondAttribute="trailing" constant="37" id="GPc-xx-G2k"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="wM4-Qt-B3q" secondAttribute="bottom" constant="9" id="Jev-aM-GUA"/>
+                                                <constraint firstItem="wM4-Qt-B3q" firstAttribute="top" secondItem="Opo-ct-0gx" secondAttribute="topMargin" constant="9" id="Ld0-EQ-wRD"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="MHG-rX-ul0" secondAttribute="bottom" constant="31" id="jhD-Xb-vj4"/>
+                                                <constraint firstItem="MHG-rX-ul0" firstAttribute="top" secondItem="Opo-ct-0gx" secondAttribute="topMargin" constant="31" id="p3Z-hr-pKN"/>
+                                                <constraint firstItem="wM4-Qt-B3q" firstAttribute="trailing" secondItem="Opo-ct-0gx" secondAttribute="trailingMargin" id="zzT-qo-506"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="animalShapeImage" destination="wM4-Qt-B3q" id="UUP-ig-GGW"/>
+                                            <outlet property="collegeName" destination="MHG-rX-ul0" id="Pfy-4b-ehl"/>
+                                            <outlet property="progressCondition" destination="o3M-04-tbY" id="zzx-at-wDK"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="5fz-pR-Dmi"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Wj3-um-QE7" firstAttribute="top" secondItem="5fz-pR-Dmi" secondAttribute="top" id="Ef2-me-6gq"/>
+                            <constraint firstItem="Wj3-um-QE7" firstAttribute="leading" secondItem="5fz-pR-Dmi" secondAttribute="leading" id="Ezs-C5-OoL"/>
+                            <constraint firstItem="5fz-pR-Dmi" firstAttribute="bottom" secondItem="Wj3-um-QE7" secondAttribute="bottom" id="XW3-lO-hIs"/>
+                            <constraint firstItem="5fz-pR-Dmi" firstAttribute="trailing" secondItem="Wj3-um-QE7" secondAttribute="trailing" id="sDa-LL-Qnl"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="ztg-bv-cKb">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="folder" catalog="system" id="wai-lq-naF">
+                            <connections>
+                                <segue destination="uTf-5E-bOt" kind="show" id="sDO-Eb-piE"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="Wj3-um-QE7" id="w84-1s-5fT"/>
+                        <segue destination="7lf-q5-15m" kind="show" id="GgH-YI-e8b"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BWP-O2-hH7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1669.5652173913045" y="-147.32142857142856"/>
+        </scene>
+        <!--MyMeeting-->
+        <scene sceneID="5Re-Do-oTr">
+            <objects>
+                <viewControllerPlaceholder storyboardName="MyMeetingStoryboard" referencedIdentifier="MyMeeting" id="uTf-5E-bOt" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="LsX-ho-MoS"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UT6-0v-ldt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2235" y="-771"/>
+        </scene>
+        <!--Meeting Detail Info View Controller-->
+        <scene sceneID="ewG-Ei-nhC">
+            <objects>
+                <viewController id="7lf-q5-15m" customClass="MeetingDetailInfoViewController" customModule="Koting" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eag-5u-Ygs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="s3M-4w-rgx"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="AJn-y9-i9u"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ljy-nw-Zcp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2558" y="-147"/>
+        </scene>
+        <!--MyInfo-->
+        <scene sceneID="ik7-ue-C38">
+            <objects>
+                <viewControllerPlaceholder storyboardName="MyInfoStoryboard" referencedIdentifier="MyInfo" id="pAo-f6-MF4" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="gzq-ls-2au"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YKs-Il-GEo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-107" y="446"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="dCC-OO-osb">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="c8T-lo-ar8" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jxZ-Fp-yYS">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="s4w-3C-TWR" kind="relationship" relationship="viewControllers" id="QqC-Nv-WgE"/>
+                        <segue destination="pAo-f6-MF4" kind="relationship" relationship="viewControllers" id="hJK-LN-irz"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HyP-bi-IbQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-107.24637681159422" y="-147.32142857142856"/>
+        </scene>
+        <!--List-->
+        <scene sceneID="Wpn-wm-KLt">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="s4w-3C-TWR" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="List" id="hVr-Ch-38t"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="20R-3t-hlE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="td4-Wk-S6y" kind="relationship" relationship="rootViewController" id="PnK-ZC-7Xl"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="49S-aT-Saw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="761" y="-147"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="folder" catalog="system" width="128" height="97"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
