LaunchScreen 이미지 네임 변경, MeetingList 이동하는 코드 수정

--- a/Koting/Koting/View/Base.lproj/LaunchScreen.storyboard
+++ b/Koting/Koting/View/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="연꽃들고윙크아코_(designed by 박세리,원혜림)" translatesAutoresizingMaskIntoConstraints="NO" id="FPX-Vs-n62">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image" translatesAutoresizingMaskIntoConstraints="NO" id="FPX-Vs-n62">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Koting" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DMJ-bG-GAb">
@@ -45,7 +45,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="연꽃들고윙크아코_(designed by 박세리,원혜림)" width="1000" height="1000"/>
+        <image name="image" width="1000" height="1000"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
